--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.leetcode.arrayshashing'
+group = 'ru.itk.wallet'
 version = '0.0.1-SNAPSHOT'
 description = 'WalletITK'
 
@@ -28,7 +28,6 @@ dependencies {
 
     // starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
